--- a/cadastro.html
+++ b/cadastro.html
@@ -62,7 +62,7 @@
       <div class="modal" id="modal">
         <div class="modal-content">
           <header class="modal-header">
-            <h2>Novo Cliente</h2>
+            <h2>Novo Cadastro</h2>
             <span class="modal-close" id="modalClose">&#10006;</span>
           </header>
           <form id="form" class="modal-form">
